test_data/end_to_end/err__path_resolve_wildcard/stderr.txt
error: `S` found in multiple wildcard imports
  --> main.cz:17:13
17 |     let v = S{};
                 ~

error: `char` found in multiple wildcard imports
  --> main.cz:18:12
18 |     let v: char;
                ~~~~
